tests/ui/traits/wf-object/only-maybe-bound.stderr
error[E0658]: `?Trait` is not permitted in trait object types
  --> $DIR/only-maybe-bound.rs:3:15
   |
LL | type _0 = dyn ?Sized;
   |               ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0224]: at least one trait is required for an object type
  --> $DIR/only-maybe-bound.rs:3:11
   |
LL | type _0 = dyn ?Sized;
   |           ^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0224, E0658.
For more information about an error, try `rustc --explain E0224`.
